--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
     background: rgb(36, 92, 36);
 }
 
+h1 {
+    text-align:center
+}
+
+h2 {
+    text-align:center
+}
+
 p {
     text-align: center
 }
