--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-    background: rgb(36, 92, 36);
+    background: rgb(240, 253, 166);
 }
 
 h1 {
     text-align:center;
-    background: rgb(202, 236, 5);
-    color: blue;
+    background: rgb(97, 13, 2);
+    color: rgb(11, 53, 6);
 }
 
 h2 {
