--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     background: rgb(1, 37, 10);
 }
 
+#banner {
+    width: 100%;
+    
+}
+
 h1 {
     text-align:center;
     background: rgb(71, 8, 3);
