--- a/produtos.css
+++ b/produtos.css
@@ -9,6 +9,7 @@ header {
 
 nav li {
     display: inline;
+    margin: 0 0 0 15px;
 }
 
 nav a {
@@ -16,4 +17,5 @@ nav a {
     color: #f4f7ca;
     font-weight: bold;
     font-size: 22px;
+    text-decoration: none;
 }
