--- a/produtos.css
+++ b/produtos.css
@@ -5,6 +5,13 @@
 
 header {
     background: #123b07;
+    padding: 20px 0;
+}
+
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
 }
 nav {
     position: absolute;
