--- a/produtos.css
+++ b/produtos.css
@@ -43,8 +43,8 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background: ttcccc;
-    margin: 0 1,5%;
+    background: ttcccccc;
+    margin: 0 1,5%; 
 }
 
 .produtos h2 {
