--- a/produtos.css
+++ b/produtos.css
@@ -43,7 +43,7 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background: ttcccccc;
+    background: ;
     margin: 0 1,5%; 
 }
 
