--- a/produtos.css
+++ b/produtos.css
@@ -14,10 +14,11 @@ header {
     width: 940px;
     margin: 0 auto;
 }
+
 nav {
     position: absolute;
     top: 110px;
-    right: 5;
+    right: ;
 }
 
 nav li {
