--- a/produtos.css
+++ b/produtos.css
@@ -44,7 +44,7 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background: ;
+    background: ttccccccco;
     margin: 0 1,5%; 
 }
 
