--- a/produtos.css
+++ b/produtos.css
@@ -44,8 +44,8 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background: ttccccccco;
-    margin: 0 1,5%; 
+    background: ttc;
+    margin: 1,5%; 
 }
 
 .produtos h2 {
