--- a/produtos.css
+++ b/produtos.css
@@ -44,7 +44,7 @@ nav a {
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background: ttc;
+    background-position-x: 110px;
     margin: 1,5%; 
 }
 
