--- a/produtos.css
+++ b/produtos.css
@@ -46,6 +46,11 @@ nav a {
     vertical-align: top;
     background: ttccccc;
     margin: 1,5%; 
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border-color: #123b07;
+    border-width: ;
+    border-style: ;
 }
 
 .produtos h2 {
@@ -60,5 +65,5 @@ nav a {
 
 .imagem1 {
     width: 390px;
-    height: 390px;
+    height: 320px;
 }
