--- a/produtos.css
+++ b/produtos.css
@@ -48,9 +48,10 @@ nav a {
     margin: 1,5%; 
     padding: 30px 20px;
     box-sizing: border-box;
-    border-color: #00000;
+    border-color: #000000;
     border-width: 2px;
     border-style: solid;
+    border: 2px solid;
 }
 
 .produtos h2 {
