--- a/produtos.css
+++ b/produtos.css
@@ -49,6 +49,7 @@ nav a {
     padding: 30px 20px;
     box-sizing: border-box;
     border: 2px solid #000000;
+    border-radius: 10px 20px 30px 40px;
 }
 
 .produtos h2 {
