--- a/produtos.css
+++ b/produtos.css
@@ -57,6 +57,10 @@ nav a:hover {
     border-radius: 10px;
 }
 
+.produtos li:hover {
+    border-color: #c78c19;
+}
+
 .produtos h2 {
     font-size: 20px;
     font-weight: bold;
