--- a/produtos.css
+++ b/produtos.css
@@ -62,7 +62,11 @@ nav a:hover {
 }
 
 .produtos li:active {
-    border-color: #c78c19;
+    border-color: #088c19;
+}
+
+.produtos li:hover h2{
+
 }
 
 .produtos h2 {
