--- a/produtos.css
+++ b/produtos.css
@@ -70,8 +70,9 @@ font-size: 40px;
 }
 
 .produtos h2 {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
+    margin-top: 10px;
 }
 
 .imagem {
@@ -83,3 +84,4 @@ font-size: 40px;
     width: 390px;
     height: 320px;
 }
+
