--- a/produtos.css
+++ b/produtos.css
@@ -1,94 +1,99 @@
 .logo {
-    width: 370px;
-    height: 310px;
-    margin: 0px;
+    width: 250px;
+    height: 250px;
 }
 
 header {
-    background: #123b07;
-    padding: 16px;
+    background: #ffeccf9d;
+    padding: 20px 0;
 }
 
 .caixa {
     position: relative;
-    width: 940px;
+    width: 740px;
     margin: 0 auto;
 }
 
 nav {
     position: absolute;
-    top: 50px;
+    top: 130px;
     right: 0;
+
 }
 
 nav li {
     display: inline;
-    margin: 15px;
+    margin: 0 0 0 15px;
 }
 
-nav a {
+ nav a {
     text-transform: uppercase;
-    color: #f4f7ca;
+    color: black;
     font-weight: bold;
-    font-size: 20px;
-    text-decoration: none;
-}
+    font-size: 22px;
+    text-decoration: none;    
+ }
 
-nav a:hover { 
-    color: #c78c19;
+nav a:hover {
+    color: rgb(255, 136, 0);
     text-decoration: underline;
 }
 
-.produtos {
-    width: 1040px;
+ .produtos {
+    width: 940px;
     margin: 0 auto;
-}
+    padding: 50px 0;
+ }
 
-.produtos li {
+ .produtos li {
     display: inline-block;
     text-align: center;
     width: 30%;
     vertical-align: top;
-    background: ttccccc;
-    margin: 1,5%; 
+    margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
-    border: 2px solid #000000;
+    border: 2px solid black;
     border-radius: 10px;
-}
+ }
 
-.produtos li:hover {
-    border-color: #c78c19;
-}
+ .produtos li:hover {
+    border-color: rgb(255, 136, 0);
+ }
 
 .produtos li:active {
-    border-color: #088c19;
+    border-color: rgb(9, 160, 9);
 }
 
-.produtos li:hover h2{
-font-size: 40px;
+.produtos li:hover h2 {
+    font-size: 34px;
 }
 
-.produtos h2 {
+ .produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+
+ }
+
+ .produto-descriçao {
+    font-size: 18px;
+}
+
+ .produto-preço {
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
-}
+ }
 
-.imagem {
+ .imagem {
     width: 250px;
-    height: 250px;
-}
-
-.imagem1 {
-    width: 390px;
-    height: 320px;
-}
+ }
 
 footer {
     text-align: center;
-    background-color: #f4f7ca;
-}
+    background: url();
+    padding: 10px 0;
+ }
   
 .copyright {
     color: #123b07;
