--- a/produtos.css
+++ b/produtos.css
@@ -91,7 +91,7 @@ nav a:hover {
 
 footer {
     text-align: center;
-    background: url();
+    background: url(fundo.jpg);
     padding: 10px 0;
  }
 
