--- a/produtos.css
+++ b/produtos.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    background: #ffeccf9d;
+    background: #032b039d;
     padding: 20px 0;
 }
 
@@ -91,7 +91,7 @@ nav a:hover {
 
 footer {
     text-align: center;
-    background: url(fundo.jpg);
+    background-color: antiquewhite;
     padding: 10px 0;
  }
 
