--- a/produtos.css
+++ b/produtos.css
@@ -89,6 +89,10 @@ nav a:hover {
     width: 250px;
  }
 
+ .imagem1 {
+    width: 150px;
+ }
+
 footer {
     text-align: center;
     background-color: antiquewhite;
