--- a/produtos.css
+++ b/produtos.css
@@ -93,6 +93,10 @@ nav a:hover {
     width: 200px;
  }
 
+ .imagem2 {
+    width: 150px;
+ }
+
 footer {
     text-align: center;
     background-color: antiquewhite;
