--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav a:hover {
 h1 {
     text-align:center;
     font-size: 45px;
-    background: rgb(167, 62, 54);
+    background: rgb(252 190 97);
     color: rgb(247, 243, 188);
 }
 
