--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav a:hover {
 /*HOME*/
 
 #banner1 {
-    width: 1050px;
+    width: 1550px;
     height: 550px;
 }
 
@@ -46,7 +46,7 @@ nav a:hover {
 h1 {
     text-align:center;
     font-size: 45px;
-    background: rgb(252 190 97);
+    background: rgb(255, 184, 78);
     color: rgb(247, 243, 188);
 }
 
