--- a/style.css
+++ b/style.css
@@ -113,3 +113,15 @@ footer {
     font-size: 13px;
     margin: 20px 0 0;
 }
+
+/* contato */
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+
+}
