--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ main {
 form {
     margin: 40px 0;
 }
-form label, form p {
+form label, form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -140,3 +140,21 @@ form label, form p {
 .checkbox {
     margin: 20px;
 }
+.enviar {
+    width: 40%;
+    padding: 15px 0; 
+    background-color: orange;
+    color: rgb(252, 253, 253);
+    font-size: 18px;
+    border: none ;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+.enviar:hover {
+    background: rgb(240, 89, 89) ;
+    transform:scale(1.2);
+    transform: rotate(70deg);
+}
+
+
