--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ form label, form legend {
 .enviar {
     width: 40%;
     padding: 15px 0; 
-    background-color: orange;
+    background-color: rgb(255, 165, 0);
     color: rgb(252, 253, 253);
     font-size: 18px;
     border: none ;
@@ -152,9 +152,22 @@ form label, form legend {
     cursor: pointer;
 }
 .enviar:hover {
-    background: rgb(248, 135, 42) ;
+    background: rgb(250, 143, 2) ;
     transform: scale(1.2);
 
 }
 
+table {
+    margin:20px 0 40px ;
+}
 
+thead {
+    background:rgb(71, 119, 61) ;
+    color: white ;
+    font-weight: bold;
+}
+ 
+td {
+    border: 1px solid #000;
+    padding: 8px 15px;
+}
