--- a/style-home.css
+++ b/style-home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #457039;
+    background-color: #ffffff;
 }
 
 /*NAVEGAÇÃO ENTRE PAGINAS*/
@@ -39,20 +39,27 @@ nav a:hover {
     height: 350px;
 }
 
+#banner1 {
+    width: 1450px;
+    height: 750px;
+}
+
 h1 {
     text-align:center;
-    font-size: 45px;
-    background: rgb(247, 216, 171);
+    font-size: 65px;
+    background: rgb(5, 59, 3);
     color: rgb(248, 129, 17);
 }
 
 h2 {
     text-align:center;
+    font-size: 25px;
     color:antiquewhite
 }
 
 p {
     text-align: center;
+    font-size: 18px;
     color:antiquewhite;
 
 }
@@ -61,3 +68,45 @@ p {
     text-align: center;
     color: antiquewhite;
 }
+
+footer {
+    text-align: center;
+    background-color: rgb(252, 190, 97);
+    padding: 10px 0;
+ }
+
+ .logo {
+    width: 250px;
+    height: 250px;
+}
+
+header {
+    background: #0446049d;
+    padding: 20px 0;
+}
+
+.caixa {
+    position: relative;
+    width: 1350px;
+    margin: 0 auto;
+}
+
+nav {
+    position: absolute;
+    top: 120px;
+    right: 100px;
+
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+ nav a {
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;    
+ }
