--- a/style.css
+++ b/style.css
@@ -171,3 +171,83 @@ td {
     border: 1px solid #000;
     padding: 8px 15px;
 }
+
+/*CSS DA PAGINA INICIAL*/
+.banner {
+    width: 100%;
+}
+
+.titulo-principal {
+     text-align: center;
+     font-size: 4em;
+     margin: 0 0 1em;
+}
+
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+.principal em {
+    font-size: italic;
+}
+
+.navegação {
+    padding: 20px 0;
+}
+
+.caixa {
+    position: relative;
+    width: 1000px;
+    margin: 0 auto;
+}
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;    
+ }
+
+ /*HOME*/
+
+#banner {
+    position: relative;
+    width: 350px;
+    height: 350px;
+  
+}
+
+#banner1 {
+    width: 1900px;
+    height: 1100px;
+}
+
+h1 {
+    text-align:center;
+    font-size: 65px;
+    background: rgb(5, 59, 3);
+    color: rgb(248, 129, 17);
+}
+
+h2 {
+    text-align:center;
+    font-size: 50px;
+    color:rgb(9, 44, 6)
+}
+
+p {
+    text-align: center;
+    font-size: 20px;
+    color:rgb(6, 49, 9);
+
+}
+
