--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ main {
 form {
     margin: 40px 0;
 }
+
 form label, form legend {
     display: block;
     font-size: 20px;
@@ -140,6 +141,7 @@ form label, form legend {
 .checkbox {
     margin: 20px;
 }
+
 .enviar {
     width: 40%;
     padding: 15px 0; 
@@ -151,6 +153,7 @@ form label, form legend {
     transition: 1s all;
     cursor: pointer;
 }
+
 .enviar:hover {
     background: rgb(250, 143, 2) ;
     transform: scale(1.2);
@@ -173,81 +176,5 @@ td {
 }
 
 /*CSS DA PAGINA INICIAL*/
-.banner {
-    width: 100%;
-}
 
-.titulo-principal {
-     text-align: center;
-     font-size: 4em;
-     margin: 0 0 1em;
-}
-
-.principal p {
-    margin: 0 0 1em;
-}
-
-.principal strong {
-    font-weight: bold;
-}
-.principal em {
-    font-size: italic;
-}
-
-.navegação {
-    padding: 20px 0;
-}
-
-.caixa {
-    position: relative;
-    width: 1000px;
-    margin: 0 auto;
-}
-
-nav li {
-    display: inline;
-    margin: 0 0 0 15px;
-}
-
-nav a {
-    text-transform: uppercase;
-    color: black;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;    
- }
-
- /*HOME*/
-
-#banner {
-    position: relative;
-    width: 350px;
-    height: 350px;
-  
-}
-
-#banner1 {
-    width: 1900px;
-    height: 1100px;
-}
-
-h1 {
-    text-align:center;
-    font-size: 65px;
-    background: rgb(5, 59, 3);
-    color: rgb(248, 129, 17);
-}
-
-h2 {
-    text-align:center;
-    font-size: 50px;
-    color:rgb(9, 44, 6)
-}
-
-p {
-    text-align: center;
-    font-size: 20px;
-    color:rgb(6, 49, 9);
-
-}
-
+fazer aqui
