--- a/style.css
+++ b/style.css
@@ -117,178 +117,170 @@ footer {
 /* contato */
 
 main {
-    width: 940px;
-    margin: 0 auto;
+  
+}
+
+.contatomain {
+  width: 940px;
+  margin: 0 auto;
 }
 
 form {
-    margin: 40px 0;
+  margin: 40px 0;
 }
 
 form label, form legend {
-    display: block;
-    font-size: 20px;
-    margin: 0 0 10px;
+  display: block;
+  font-size: 20px;
+  margin: 0 0 10px;
 }
 
 .input-padrao {
-    display: block;
-    margin: 0 0 20px;
-    padding: 10px 25px;
-    width: 50%;
+  display: block;
+  margin: 0 0 20px;
+  padding: 10px 25px;
+  width: 50%;
 }
 
 .checkbox {
-    margin: 20px;
+  margin: 20px 0;
 }
 
 .enviar {
-    width: 40%;
-    padding: 15px 0; 
-    background-color: rgb(255, 165, 0);
-    color: rgb(252, 253, 253);
-    font-size: 18px;
-    border: none ;
-    border-radius: 5px;
-    transition: 1s all;
-    cursor: pointer;
+  width: 40%;
+  padding: 15px 0;
+  background: rgb(255, 115, 0);
+  color: rgb(252, 252, 252);
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  transition: 2s ease-in-out;
+  cursor: pointer;
 }
 
 .enviar:hover {
-    background: rgb(250, 143, 2) ;
-    transform: scale(1.2);
-
+  background: rgb(1, 163, 1);
+  transform: rotate(360deg) scale(1.2);
 }
 
+/*Tabela de horario*/
+
 table {
-    margin:20px 0 40px ;
+  margin: 20px 0 40px;
 }
 
 thead {
-    background:rgb(71, 119, 61) ;
-    color: white ;
-    font-weight: bold;
+  background: royalblue;
+  color: black;
+  font-weight: bold;
 }
- 
-td {
-    border: 1px solid #000;
-    padding: 8px 15px;
+
+td, th {
+  border: 1px solid #000000;
+  padding: 8px 15px;
 }
 
 /*CSS DA PAGINA INICIAL*/
 
-/*NAVEGAÇÃO ENTRE PAGINAS*/
-.navegação {
-    padding: 20px 0;
-}
-
-.caixa {
-    position: center;
-    width: 400px;
-    margin: 0 auto;
-}
-
-nav li {
-    display: inline;
-    margin: 0 0 0 15px;
-}
-
-nav a {
-    text-transform: uppercase;
-    color: black;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;    
- }
-
-nav a:hover {
-    color: rgb(255, 136, 0);
-    text-decoration: underline;
-}
-
-/*HOME*/
-
-#banner {
-    width: 350px;
-    height: 350px;
-}
-
-#banner1 {
-    width: 2100px;
-    height: 1000px;
-}
-
-h1 {
-    text-align:left;
-    font-size: 65px;
-    background: rgb(5, 59, 3);
-    color: rgb(248, 129, 17);
-}
-
-h2 {
-    text-align:center;
-    font-size: 25px;
-    color:rgb(9, 44, 6)
-}
-
- p {
-    text-align: center;
-    font-size: 18px;
-    color:rgb(0, 0, 0);
-    
-
-}
-
-.rodape{
-    text-align: center;
-    color: antiquewhite;
-}
-
-footer {
-    text-align: center;
-    background-color: rgb(252, 190, 97);
-    padding: 10px 0;
- }
-
- .logo {
-    width: 250px;
+.banner {
+    width: 100%;
     height: 250px;
-}
-
-header {
-    background: #0446049d;
-    padding: 20px 0;
-}
-
-.caixa {
-    position: relative;
-    width: 1900px;
+    border-radius: 10px;
+    object-fit: cover;
+  }
+  
+  .titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+  }
+  
+  .principal {
+    padding: 3em 0;
+    background: #ffffff;
+    width: 940px;
     margin: 0 auto;
-}
-
-nav {
-    position: absolute;
-    top: 120px;
-    right: 100px;
-
-}
-
-nav li {
-    display: inline;
-    margin: 0 0 0 15px;
-}
-
- nav a {
-    text-transform: uppercase;
-    color: black;
+  }
+  
+  .principal p {
+    margin: 0 0 1em;
+  }
+  
+  .principal strong {
     font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;    
- }
-
- .panfleto {
-    width: 300px;
-    position:  center;
- }
+  }
+  
+  .panfleto {
+    width: 150px;
+    float: left;
+    margin: 0 20px 20px 0;
+  }
+  
+  .mapa {
+    padding: 3em 0;
+    background: linear-gradient( rgb(255, 255, 255), #23fd06);
+  }
+  
+  .mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+  }
+  
+  .mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+  }
+  
+  .beneficios {
+    padding: 3em 0;
+    background: #08fa00;
+  }
+  
+  .conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+  }
+  
+  .lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  .itens {
+    line-height: 1.5;
+  }
+  
+  .itens:first-child {
+    font-weight: bold;
+  }
+  
+  .itens:before {
+    content: "✸";
+  }
+  
+  .imagem-beneficios {
+    width: 60%;
+    height: 250px;
+  }
+  
+  .video {
+    width: 560px;
+    margin: 2em auto;
+   }
+  
+  
+  .pizza {
+     width: 200px;
+     height: 200px;
+  }
+  
+  .copyrigth {
+    margin-top: 15px;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+  }
  
  
